# collectorshub

./: .gitignore  README.md  TODO.md  agent_changelog.md  commands.txt  giavonni_prompt.md  manage.py  package.json  pyproject.toml  vite.config.mjs
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
a_accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
a_accounts/templates/accounts/: profile.html
a_collectibles/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
a_collectibles/management/commands/: generate_sample_collectibles.py
a_collectibles/templates/collectibles/: collectible_detail.html  collectible_form.html  collectible_list.html
a_collectibles/templatetags/: in_wishlist.py
a_core/: settings.py  urls.py  wsgi.py
a_messaging/: apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
a_messaging/templates/messaging/: _message_form.html  _messages_list.html  conversation_detail.html  inbox.html
a_wishlist/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
a_wishlist/templates/wishlist/: wishlist.html  wishlist_offer_form.html
accounts/: admin.py  forms.py  models.py  views.py
accounts/templates/accounts/: profile.html  profile_edit.html
collectibles/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
collectibles/templates/: index.html  nav.html
collectibles/templates/collectibles/: collectible_confirm_delete.html  collectible_detail.html  collectible_enhanced.html  collectible_form.html  (+1 more)
collectorshub/: asgi.py  settings.py  urls.py
messaging/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
random/: TODO.md
static/css/: main.css  wishlist.css
static/js/: main.js
templates/: base.html  index.html  nav.html
templates/cotton/: card.html
templates/partials/: messages.html  messages_nav_icon.html  wishlist_count.html
wishlist/: admin.py  apps.py  apps.py.new  models.py  urls.py  views.py
(+12 files in other folders)
